fix some (deprecation) warnings